hw3/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: arch-health-srvice
  name: arch-health-srvice
spec:
  ports:
    - port: 8083
      targetPort: 8083
      name: web
    - port: 9093
      targetPort: 9000
      protocol: TCP
      name: metrics
  type: ClusterIP
  selector:
    app: arch-health
